# yourcontrols

./: .env.example  .gitignore  Cargo.toml  Changelog.md  Contributing.md  README.md  Readme.md  Supported.md  build.rs  package-lock.json  package.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
aircraftdefs/: AS1000.yaml  C172.yaml  autopilot.yaml  general.yaml  navigation.yaml  physics.yaml  radios.yaml
definitions/: README.md  Supported_2020.md  Supported_2024.md  features.json
definitions/aircraft/: A32NX.yaml  AeroSachs & Erasam - Tecnam P92 Echo.yaml  AeroSachs - Tecnam P92 Echo.yaml  Aeroplane Heaven - Cessna 140.yaml  Aeroplane Heaven - Cessna C140.yaml  Aeroplane Heaven - Electra 10A.yaml  Aeroplane Heaven - Lockheed Model 10A Electra.yaml  AeroplaneHeaven_C140.yaml  AeroplaneHeaven_Electra-10A.yaml  Aerosoft - DHC-6 Twin Otter.yaml  Aerosoft_CRJ.yaml  Aerosoft_CRJ700.yaml  Aerosoft_TwinOtter.yaml  Airbus_H135.yaml  Asobo Studio - Airbus A320neo.yaml  Asobo Studio - Beechcraft Baron G58.yaml  Asobo Studio - Beechcraft Bonanza G36.yaml  Asobo Studio - Beechcraft King Air 350i.yaml  Asobo Studio - Boeing 747-8 Intercontinental.yaml  Asobo Studio - Boeing 747-8i.yaml  Asobo Studio - Boeing 787-10 Dreamliner.yaml  Asobo Studio - Boeing 787-10.yaml  Asobo Studio - Boeing FA-18E Superhornet.yaml  Asobo Studio - Cessna 152.yaml  Asobo Studio - Cessna 172 Skyhawk.yaml  Asobo Studio - Cessna 172SP Skyhawk (G1000).yaml  Asobo Studio - Cessna 172SP Skyhawk.yaml  Asobo Studio - Cessna 208B Grand Caravan EX.yaml  Asobo Studio - Cessna 208B Grand Caravan.yaml  Asobo Studio - Cessna C152.yaml  (+319 more)
scripts/: build.py  hevents.py  hevents.txt  touchscreens.py
src/: aircraftstate.rs  app.rs  bytereader.rs  clientmanager.rs  definitions.rs  dualserver.rs  interpolate.rs  main.js  main.rs  simclient.rs  simconfig.rs  simserver.rs  syncdefs.rs  update.rs  util.rs  varreader.rs  velocity.rs
src-tauri/: Cargo.toml
src/yourcontrols/: Cargo.toml  build.rs  pnpm-lock.yaml
src/yourcontrols-api/database/: Cargo.toml
src/yourcontrols-api/database/migrations/2021-08-01-220855_create_tables/: down.sql  up.sql
src/yourcontrols-api/database/src/: lib.rs  models.rs  schema.rs
src/yourcontrols-api/database/src/handlers/: lobbies.rs  mod.rs
src/yourcontrols-api/server/: Cargo.toml
src/yourcontrols-api/server/src/: handlers.rs  main.rs  models.rs  routes.rs  util.rs
src/yourcontrols-definitions/: Cargo.toml
src/yourcontrols-definitions/src/: error.rs  helpers.rs  lib.rs  main.rs  store.rs  util.rs
src/yourcontrols-discord/: .gitignore  Cargo.toml  cargo.toml
src/yourcontrols-discord/src/: error.rs  events.rs  lib.rs
src/yourcontrols-gauge/: Cargo.toml  README.md  gauge.code-workspace
src/yourcontrols-gauge/.cargo/: Config.toml
src/yourcontrols-gauge/src/: data.rs  diff.rs  fragment.rs  gauge.rs  lib.rs  util.rs
src/yourcontrols-gauge/src/data/: datum.rs  diff.rs  mod.rs  util.rs  watcher.rs
src/yourcontrols-gauge/src/interpolation/: mod.rs  util.rs
src/yourcontrols-gauge/src/messages/: fragment.rs  mod.rs
src/yourcontrols-gauge/src/sync/: condition.rs  defs.rs  mod.rs  scripting.rs  util.rs
src/yourcontrols-gauge/src/util/: general.rs  mod.rs  test.rs
src/yourcontrols-hoster/: Cargo.toml
src/yourcontrols-hoster/src/: lib.rs  main.rs  util.rs
src/yourcontrols-hoster/src/hoster/: communicator.rs  mod.rs  state.rs
src/yourcontrols-hoster/src/rendezvous/: mod.rs  sessions.rs
src/yourcontrols-hoster/src/server/: clients.rs  mod.rs  test.rs
src/yourcontrols-net/: Cargo.toml  build.rs
src/yourcontrols-net/src/: base.rs  client.rs  error.rs  handshake.rs  lib.rs  messages.rs  mod.rs  payloads.rs  server.rs  test.rs  util.rs
src/yourcontrols-net/src/new/: base.rs  handshake.rs  mod.rs  test.rs
src/yourcontrols-server/: .env.example  Cargo.toml  README.md
src/yourcontrols-server/src/: hoster.rs  main.rs  rendezvous.rs  servers.rs  sessions.rs  util.rs
src/yourcontrols-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/yourcontrols-tauri/src-tauri/capabilities/: default.json
src/yourcontrols-tauri/src-tauri/icons/: icon.icns
src/yourcontrols-tauri/src-tauri/src/: client_manager.rs  commands.rs  definitions.rs  lib.rs  main.rs  states.rs  varreader.rs
src/yourcontrols-tauri/src-tauri/src/events/: client_fail.rs  client_manager.rs  control.rs  metrics.rs  server.rs  server_fail.rs
src/yourcontrols-tauri/src-tauri/src/states/: client_manager.rs  definitions.rs  settings.rs  sim_connector.rs  transfer_client.rs
src/yourcontrols-tauri/src-tauri/src/sync/: control.rs  mod.rs  transfer.rs
src/yourcontrols-types/: Cargo.toml
src/yourcontrols-types/src/: error.rs  lib.rs
src/yourcontrols-types/src/gauge/: fragment.rs  messages.rs  messages_impl.rs  mod.rs  msgpack.rs
src/yourcontrols-ui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src/yourcontrols-ui/src-tauri/src/: cmd.rs  lib.rs  util.rs
src/yourcontrols/public/: index.html
src/yourcontrols/src/: App.vue  app.rs  audio.rs  cli.rs  clientmanager.rs  corrector.rs  definitions.rs  emulator.rs  main.rs  main.ts  paths.rs  program.rs  simconfig.rs  syncdefs.rs  update.rs  util.rs  varreader.rs  velocity.rs
src/yourcontrols/src-tauri/: Cargo.toml  build.rs
src/yourcontrols/src-tauri/src/: aircraft.rs  clients.rs  main.rs  network.rs  program.rs  simulator.rs
src/yourcontrols/src-tauri/src/ui/: cliui.rs  cmd.rs  mod.rs  tauriui.rs  util.rs
src/yourcontrols/src/components/: HelloWorld.vue
src/yourcontrols/src/program/: app_loop.rs  emulator_runtime.rs  network.rs  simconnect.rs  state.rs  sync.rs
src/yourcontrols/src/router/: index.ts
src/yourcontrols/src/sync/: control.rs  freezer.rs  gaugecommunicator.rs  jscommunicator.rs  memwriter.rs  mod.rs  transfer.rs
src/yourcontrols/src/views/: Aircraft.vue  Changelog.vue  Loading.vue  Main.vue  NetworkTest.vue
src/yourcontrols/web/: emulator.html  emulator.js  index.html  list.js  main.js  stylesheet.css
web/: aircraft.js  index.html  list.js  main.js  stylesheet.css
(+437 files in other folders)
