[workspace]
members = [
    "src/yourcontrols",
    "src/yourcontrols-net",
    "src/yourcontrols-types",
    "src/yourcontrols-hoster",
    "src/yourcontrols-ui/src-tauri",
    "src/yourcontrols-discord",
    "src/yourcontrols-gauge",
    "src/yourcontrols-definitions",
]

default-members = ["src/yourcontrols"]
