[workspace]
members = [
    "src/yourcontrols/src-tauri",
    "src/yourcontrols-net",
    "src/yourcontrols-types",
    "src/yourcontrols-discord",
    "src/yourcontrols-definitions",
    "src/yourcontrols-hoster",
]

exclude = ["src/yourcontrols-gauge"]

default-members = ["src/yourcontrols/src-tauri"]
