[workspace]
members = [
    "src/yourcontrols/src-tauri",
    "src/yourcontrols-net",
    "src/yourcontrols-types",
    "src/yourcontrols-discord",
    "src/yourcontrols-definitions",
    "src/yourcontrols-hoster",
    # API
    "src/yourcontrols-api/server",
    "src/yourcontrols-api/database",
]

exclude = ["src/yourcontrols-gauge"]

default-members = ["src/yourcontrols/src-tauri"]
