[package]
name = "yourcontrols-definitions"
version = "0.1.0"
authors = ["Sequal32 <connor0530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
owning_ref = "0.4"
regex = "1.0"
rhai = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

yourcontrols-types = { path = "../yourcontrols-types" }
