[package]
name = "yourcontrols-discord"
version = "0.1.0"
license = "GPL-3.0"
repository = "https://github.com/Sequal32/yourcontrols"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord_game_sdk = "1.0.1"
crossbeam-channel = "0.5"
base64 = "0.13.0"

yourcontrols-types = { path = "../yourcontrols-types" }
