[package]
name = "yourcontrols-gauge"
version = "0.1.0"
authors = ["Sequal32 <connor0530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
rmp-serde = "0.15"
serde = {version = "1.0", features = ["derive"]}
msfs = { git = "https://github.com/Sequal32/msfs-rs.git", branch = "main" }