[package]
name = "yourcontrols-hoster"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "yourcontrols-hoster"
path = "src/main.rs"

[dependencies]
dotenv = "0.15"
laminar = { git = "https://github.com/Sequal32/laminar.git" }
log = "0.4"
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"] }
yourcontrols-net = { path = "../yourcontrols-net" }
