[package]
name = "yourcontrols-net"
version = "0.1.0"
license = "GPL-3.0"
repository = "https://github.com/Sequal32/yourcontrols"
authors = ["Sequal32 <connor0530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4"
dns-lookup = "1.0"
dotenv = "0.15"
dotenv_codegen = "0.15"
igd = "0.12"
laminar = {git = "https://github.com/Sequal32/laminar.git"}
local_ipaddress = "0.1"
log = "0.4"
retain_mut = "0.1"
rmp-serde = "0.15"
serde = {version = "1.0", features = ["derive"]}
spin_sleep = "1.0"
zstd = "0.6"

yourcontrols-types = {path = "../yourcontrols-types"}