[package]
name = "yourcontrols-net"
version = "1.0.0"
license = "GPL-3.0"
repository = "https://github.com/Sequal32/yourcontrols"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
base64 = "0.13"
igd = "0.12"
laminar = { git = "https://github.com/Sequal32/laminar.git" }
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"] }
yourcontrols-types = { path = "../yourcontrols-types" }
