[package]
name = "yourcontrols-types"
version = "0.1.0"
license = "GPL-3.0"
repository = "https://github.com/Sequal32/yourcontrols"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = "0.17"
base64 = "0.13"
crossbeam-channel = "0.5"
igd = "0.12"
laminar = { git = "https://github.com/Sequal32/laminar.git" }
rhai = { version = "0.19", features = ["serde"] }
rmp-serde = "0.15"
semver = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tungstenite = "0.13"
