[package]
name = "yourcontrols-types"
version = "0.1.0"
license = "GPL-3.0"
repository = "https://github.com/Sequal32/yourcontrols"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "0.15"
rhai = { version = "0.20", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
