[package]
name = "yourcontrols-types"
version = "0.1.0"
license = "GPL-3.0"
repository = "https://github.com/Sequal32/yourcontrols"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20"
crossbeam-channel = "0.5"
igd = "0.12"
laminar = { git = "https://github.com/Sequal32/laminar.git" }
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
