[package]
name = "yourcontrols"
version = "2.7.4"
license = "GPL-3.0"
repository = "https://github.com/Sequal32/yourcontrols"
edition = "2018"

[[bin]]
name = "YourControls"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
attohttpc = { version = "0.19", features = ["json"] }
base64 = "0.13"
bimap = { version = "0.6", features = ["serde"] }
byteorder = "1.3"
crossbeam-channel = "0.5"
derive_more = "0.99"
dotenv_codegen = "0.15"
dns-lookup = "1.0"
indexmap = { version = "1.6", features = ["serde-1"] }
laminar = { git = "https://github.com/Sequal32/laminar.git" }
log = "0.4"
num = "0.4"
retain_mut = "0.1"
rodio = "0.15"
rmp-serde = "1.1"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
simconnect = { git = "https://github.com/Sequal32/simconnect-rust", branch = "test" }
simplelog = "0.12"
spin_sleep = "1.1"
tungstenite = "0.17"
util = "0.1"
web-view = "0.7"
zip = "0.5"

yourcontrols-net = { path = "../yourcontrols-net" }
yourcontrols-types = { path = "../yourcontrols-types" }

[features]
skip_sim_connect = []
edge = ["web-view/edge"]

[build-dependencies]
winres = "0.1"
