[package]
name = "yourcontrols"
version = "2.7.7"
license = "GPL-3.0"
repository = "https://github.com/Sequal32/yourcontrols"
edition = "2018"

[[bin]]
name = "YourControls"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
attohttpc = { version = "0.24", features = ["json"] }
base64 = "0.21"
bimap = { version = "0.6", features = ["serde"] }
byteorder = "1.3"
crossbeam-channel = "0.5"
derive_more = "0.99"
dotenv_codegen = "0.15"
dns-lookup = "1.0"
indexmap = { version = "1.6", features = ["serde-1"] }
laminar = { git = "https://github.com/Sequal32/laminar.git" }
log = "0.4"
num = "0.4"
retain_mut = "0.1"
rodio = "0.16"
rmp-serde = "1.1"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
simconnect = "0.2"
simplelog = "0.12"
spin_sleep = "1.1"
tungstenite = "0.18"
util = "0.1"
web-view = "0.7"
zip = "0.6"

yourcontrols-net = { path = "../yourcontrols-net" }
yourcontrols-types = { path = "../yourcontrols-types" }

[features]
skip_sim_connect = []
edge = ["web-view/edge"]

[build-dependencies]
winres = "0.1"
