[package]
name = "yourcontrols-api"
version = "0.1.0"
authors = ["Sequal32 <connor0530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }

database = { path = "../database" }
