[package]
name = "yourcontrols_ui"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "yourcontrols_ui"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
crossbeam-channel = "0.5"
tungstenite = "0.13"
simplelog = "0.9"
serde_repr = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }
log = "0.4"
semver = { version = "0.11", features = [ "serde" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "yourcontrols_ui"
path = "src/test.rs"
