[package]
name = "yourcontrols-ui"
version = "1.0.0"
license = "GPL-3.0"
repository = "https://github.com/Sequal32/yourcontrols"
edition = "2018"

[dependencies]
serde_json = "1.0"
crossbeam-channel = "0.5"
tungstenite = "0.13"
simplelog = "0.10"
serde_repr = "0.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "0.11", features = ["all-api"] }
log = "0.4"
semver = { version = "0.11", features = ["serde"] }

yourcontrols-types = { path = "../../yourcontrols-types" }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = ["tauri/embedded-server"]
no-server = ["tauri/no-server"]

[[bin]]
name = "yourcontrols_ui"
path = "src/test.rs"
