[package]
name = "yourcontrols"
version = "1.0.0"
license = "GPL-3.0"
repository = "https://github.com/Sequal32/yourcontrols"
edition = "2018"

[dependencies]
anyhow = "1.0"
attohttpc = { version = "0.17", features = ["json"] }
clap = "2.33"
crossbeam-channel = "0.5"
dotenv_codegen = "0.15"
log = "0.4"
rmp-serde = "0.15"
semver = { version = "0.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_yaml = "0.8"
simconnect = "0.1"
simplelog = "0.10"
tauri = { version = "0.11", features = ["all-api"] }
tungstenite = "0.13"
yourcontrols-definitions = { path = "../../yourcontrols-definitions" }
yourcontrols-net = { path = "../../yourcontrols-net" }
yourcontrols-types = { path = "../../yourcontrols-types" }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = ["tauri/embedded-server"]
no-server = ["tauri/no-server"]
